# amber

./: crypto_20230722.txt
dinobot/dinobot/: .clang-format  CMakeLists.txt
dinobot/dinobot/conf/: binance_marketdata.ini  bitfinex_marketdata.ini  bitmex_marketdata.ini  bitstamp_marketdata.ini  coinbase_marketdata.ini  deribit_marketdata.ini  kraken_marketdata.ini
dinobot/dinobot/src/: CMakeLists.txt
dinobot/dinobot/src/exchanges/: CMakeLists.txt  exchange_base.cpp  exchange_base.h  exchanges.h
dinobot/dinobot/src/exchanges/binance/: CMakeLists.txt  binance_exchange.cpp  binance_exchange.h  binance_websocket.cpp  binance_websocket.h
dinobot/dinobot/src/exchanges/bitfinex/: CMakeLists.txt  bitfinex_exchange.cpp  bitfinex_exchange.h  bitfinex_websocket.cpp  bitfinex_websocket.h
dinobot/dinobot/src/exchanges/bitmex/: CMakeLists.txt  bitmex_exchange.cpp  bitmex_exchange.h  bitmex_messages.h  bitmex_websocket.cpp  bitmex_websocket.h
dinobot/dinobot/src/exchanges/bitstamp/: CMakeLists.txt  bitstamp_exchange.cpp  bitstamp_exchange.h  bitstamp_websocket.cpp  bitstamp_websocket.h
dinobot/dinobot/src/exchanges/coinbase/: CMakeLists.txt  coinbase_exchange.cpp  coinbase_exchange.h  coinbase_fix_reader.hpp  coinbase_messages.h  coinbase_parse_json.h  coinbase_websocket.cpp  coinbase_websocket.h
dinobot/dinobot/src/exchanges/deribit/: CMakeLists.txt  deribit_exchange.cpp  deribit_exchange.h  deribit_websocket.cpp  deribit_websocket.h
dinobot/dinobot/src/exchanges/kraken/: CMakeLists.txt  kraken_exchange.cpp  (+3 more)
dinobot/dinobot/src/libs/: CMakeLists.txt
dinobot/dinobot/src/marketdata_recorders/: CMakeLists.txt  marketdata_recorder.cpp
dinobot/dinobot/src/utils/: CMakeLists.txt  logger.cpp  logger.h  string_time.cpp  string_time.h
miye_trading/: .clang-format  CMakeLists.txt  README.md  git_version.h
miye_trading/apps/: CMakeLists.txt
miye_trading/apps/binance_md/: CMakeLists.txt  main.cpp
miye_trading/apps/btc_shit/: CMakeLists.txt  application.h  config_loader.h  context.cpp  context.h  main.cpp  perp_ftx.cpp  perp_ftx.h  strategy.h  strategy_param.h  symbol_index.h
miye_trading/apps/ftx_rest_sos/: CMakeLists.txt  ftx_rest_sos.cpp
miye_trading/apps/perp_ftx/: CMakeLists.txt  application.h  config_loader.h  context.cpp  context.h  hedger.h  main.cpp  maker.h  perp_ftx.h  strategy.cpp  strategy_param.h  symbol_index.h  taker.h  timer_handler.h
miye_trading/apps/test_arbiter/: CMakeLists.txt  test_arbiter.cpp
miye_trading/conf/: perp_ftx.ini
miye_trading/libcore/: CMakeLists.txt
miye_trading/libcore/dispatcher/: channel_base.h  dispatcher.h
miye_trading/libcore/essential/: app.hpp  arch.hpp  assert.hpp  backtrace.hpp  exception.hpp  platform_defs.hpp  timer.h  utils.hpp
miye_trading/libcore/math/: fast-math.hpp  math_util.h  math_utils.hpp  price_util.h
miye_trading/libcore/parsing/: csv.hpp  json.hpp  visit.hpp
miye_trading/libcore/qstream/: CMakeLists.txt  arbiter.hpp  arbiter_common.hpp  cycletimer.hpp  english_writer.hpp  exchangesim_ordermanager.hpp  exchangesim_reader.hpp  exchangesim_writer.hpp  gzfile.hpp  ip_common.cpp  ip_common.hpp  kernel_arbiter.hpp  mmap_headers.hpp  mmap_reader.hpp  mmap_writer.hpp  null_writer.hpp  nulltimer.hpp  pcap_headers.hpp  pcap_reader.hpp  pcap_writer.hpp  qstream_common.cpp  qstream_common.hpp  qstream_place.hpp  qstream_reader_interface.hpp  qstream_writer_interface.hpp  slow_arbiter.hpp  stats_writer.hpp  stdout_writer.hpp  tcp_listener.hpp  tcp_reader.hpp  tcp_writer.hpp  timer.hpp  udp_reader.hpp  udp_writer.hpp  variantqstream_reader.hpp  variantqstream_writer.hpp
miye_trading/libcore/time/: CMakeLists.txt  clock.cpp  clock.hpp  date.cpp  date.hpp  gmtime.cpp  gmtime.hpp  profiler.hpp  profiler_types.hpp  rdtsc.hpp  stats.hpp  time.hpp  timeutils.hpp
miye_trading/libcore/types/: types.hpp
miye_trading/libcore/utils/: CMakeLists.txt  apputils.hpp  array.hpp  conversions.hpp  deque.hpp  dequecontig.hpp  enums_iterator.hpp  fileutils.hpp  logging.cpp  logging.hpp  logging_def.hpp  nano_time.h  netutils.hpp  normal_queue.hpp  number_utils.hpp  queue.hpp  reassembly_buffer.hpp  rolling_queue.h  string_utils.hpp  stringutils.cpp  stringutils.hpp  syscalls_files.hpp  syscalls_libc.hpp  syscalls_misc.hpp  syscalls_mmap.hpp  syscalls_returnchecks.hpp  syscalls_sockets.hpp  vector.hpp
miye_trading/libcore/xml/: rapidxml.hpp  rapidxml_error_handler.hpp
miye_trading/libs/: CMakeLists.txt
miye_trading/libs/inifile/: inicpp.h
miye_trading/libs/logger/: logger.hpp
miye_trading/libs/ws_client/: CMakeLists.txt  ws_client.cpp  ws_client.h
miye_trading/libs/ws_util/: CMakeLists.txt  Encoding.h  HTTP.cc  HTTP.h  Time.h  WS.cc  WS.h
miye_trading/market_data/: market_main.cpp  market_main.h
miye_trading/market_data/book/: bbo.h  book_side.hpp  exchange.h  order_book.h  order_book_store.hpp
miye_trading/market_data/exchanges/binance/: binance_md_processor.h  binance_raw_msg.h  ws_client_binance.h
miye_trading/market_data/exchanges/ftx/: ftx_md_processor.h  ftx_raw_msg.h  ws_client_ftx.h
miye_trading/order_entry/ftx_fix/: CMakeLists.txt  double_to_string.hpp  field.hpp  field_iterator.hpp  field_ptr.hpp  fix_config.hpp  fix_enum.hpp  fix_istream.hpp  fix_number_utils.hpp  fix_price_utils.hpp  fix_sequence_id_file_parser.hpp  fix_session.cpp  fix_session.hpp  fix_utils.hpp  float_utils.hpp  ftx_fix_reader.hpp  ftx_fix_writer.hpp  number_to_string.hpp  order.hpp  order_container.hpp  order_handler.hpp  reject_codes.hpp  seq_num_generator.hpp  string_const.hpp  time_utils.hpp  type_utils.hpp
miye_trading/order_entry/ftx_fix/test_performance/: CMakeLists.txt  test_cme_fix_istream_performance.cpp  test_double_to_string.cpp
miye_trading/order_entry/ftx_fix/unittests/: CMakeLists.txt  MSGW_Config.xml  msgw_fix_config.xml  test_segment_config_parser.cpp
miye_trading/position/: position.h
miye_trading/risk/: hash_combine.h  risk.h
miye_trading/rules/: miye.cmake
miye_trading/script/: git_version
miye_trading/trading/: instrument.h  md_listener.h  order_manager.h  trade_flow.h  trading.h
(+34 files in other folders)
