add_subdirectory(binance)
add_subdirectory(coinbase)
add_subdirectory(bitmex)
add_subdirectory(bitfinex)
add_subdirectory(bitstamp)
add_subdirectory(deribit)
add_subdirectory(kraken)

#add_library(libexchange_base exchange_base.cpp)
#target_link_libraries(libexchange_base dinobot_websocket)
#target_link_libraries(libexchange_base dinobot_ring_logger)

